<resources>
    <string name="app_name">FinalProject</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="burger">
        <b>Chicken Burger</b>😋
    </string>
    <string name="burger_details">
       <b>Price : 250TK</b>\n
        Nothing beats a simple hamburger on a warm summer evening!
        Ground beef is blended with an easy to prepare bread crumb mixture.
        Pile these burgers with your favorite condiments, pop open a cool drink and enjoy!
    </string>

    <string name="pasta">
        <b>FUSILLI CREAMY CHICKEN PASTA</b>😋
    </string>

    <string name="pasta_details">
        <b> Price : 180TK</b>\n
        Fusilli (Spiral Pasta) in a cream sauce with chargrilled chicken, sauteed mushrooms, onions,
        fresh cream, Bechamel and parmesan cheese cooked with a blend of spices.
    </string>

    <string name="grill">
        <b>Grilled Chicken</b>😋
    </string>

    <string name="grill_details">
        <b> Price : 110TK</b>\n
        This grilled chicken breast recipe is boneless skinless chicken breasts soaked in a
        flavorful garlic and herb marinade, then grilled to brown perfection.
    </string>

    <string name="nacho">
        <b>Chicken Nachos</b>😋
    </string>

    <string name="nacho_details">
        <b> Price : 290TK</b>\n
        Crispy tortilla chips are topped together with seasoned chicken, cheese and
        other favorite nacho toppings.
    </string>
</resources>