<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cover">



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50px"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />
    

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/burger_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/burger"
                android:clickable="true"/>

            <TextView
                android:id="@+id/burger_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/burger"
                android:textColor="#B31717"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/burger_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/burger_details"
                android:textColor="#B31717"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/grill_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                android:src="@drawable/grilll" />

            <TextView
                android:id="@+id/grill_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#B31717"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:text="@string/grill" />
            <TextView
                android:id="@+id/grill_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grill_details"
                android:textColor="#B31717"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/nachos_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                android:layout_marginTop="5dp"
                android:src="@drawable/nachos"
                android:contextClickable="true"
                />

            <TextView
                android:id="@+id/nacho_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#B31717"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:text="@string/nacho" />
            <TextView
                android:id="@+id/nacho_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nacho_details"
                android:textColor="#B31717"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/pasta_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                android:layout_marginTop="5dp"
                android:src="@drawable/paasta" />

            <TextView
                android:id="@+id/pasta_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#B31717"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:text="@string/pasta" />
            <TextView
                android:id="@+id/pasta_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pasta_details"
                android:textColor="#B31717"
                android:textSize="15sp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>